
    o	R CMD INSTALL has a new option --data-compress to control the
	compression used when lazy-loading data.  One new option is
	--data-compress=bzip2 which will give ca 15% better
	compression at the expense of slower installation times.  Also
	--data-compress=xz, often giving even better compression on
	large datasets at the expense of much longer installation times.


DEPRECATED & DEFUNCT

    o	png(type="cairo1") is defunct: the value is no longer recognized.

    o	tools::Rd_parse() is defunct (as this version of R uses only
	Rd version 2).

    o	Use of ~/.Rconf (which was deprecated in favour of ~/.Rconfig
	in 2004) has finally been removed.

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.

    o 	help() arguments 'offline', 'htmlhelp' and 'chmhelp' are
	deprecated in favour of 'help_type'.

    o	clearNames() ('stats') is deprecated for unname().

    o	Basic regular expressions (extended = FALSE) are deprecated in
	strsplit, grep and friends.  There is a precise POSIX standard
	for them, but it is not what recent RE engines implement, and
	it seems that in almost all cases package authors intended
	fixed = TRUE when using extended = FALSE.

    o	methods::trySilent() is deprecated for  try(*, silent=TRUE) or
    	- more efficiently and flexibly - something like
	tryCatch(*, error = function(e) e).


INSTALLATION

    o	cairo >= 1.2 is now required (1.2.0 was released in July 2006)
	for cairo-based graphics devices (which remain optional).

    o	A suitable iconv() is now required: support for configure option
	--without-iconv has been withdrawn (it was deprecated in R 2.5.0).

    o	Perl is no longer 'essential'.	R can be built without it, but
	scripts R CMD build, check, Rprof and Sd2d require it.

    o	A system 'glob' function is now essential (a working
	Sys.glob() has been assumed since R 2.9.0 at least).

    o	C99 support for MBCS is now required, and configure option